--- a/Quizzler App/Base.lproj/Main.storyboard
+++ b/Quizzler App/Base.lproj/Main.storyboard
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,11 +17,125 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Quizzler_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zvg-rW-8Vz">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="331.33333333333331"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17J-M5-vUV">
+                                        <rect key="frame" x="0.0" y="-0.66666666666665719" width="414" height="332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="17J-M5-vUV" firstAttribute="width" secondItem="zvg-rW-8Vz" secondAttribute="width" id="YfN-Cd-taj"/>
+                                    <constraint firstItem="17J-M5-vUV" firstAttribute="height" secondItem="zvg-rW-8Vz" secondAttribute="height" id="cxz-vw-MgQ"/>
+                                    <constraint firstItem="17J-M5-vUV" firstAttribute="centerY" secondItem="zvg-rW-8Vz" secondAttribute="centerY" id="juD-AR-Ejw"/>
+                                    <constraint firstItem="17J-M5-vUV" firstAttribute="centerX" secondItem="zvg-rW-8Vz" secondAttribute="centerX" id="wYW-GW-D3i"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Md3-tO-q4u">
+                                <rect key="frame" x="0.0" y="331.33333333333337" width="414" height="294.33333333333337"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZBm-t7-crq">
+                                        <rect key="frame" x="57" y="117" width="140" height="60"/>
+                                        <color key="backgroundColor" red="0.27075586140165003" green="0.72277522208121825" blue="0.39615416540489184" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="140" id="GxU-zC-iYm"/>
+                                            <constraint firstAttribute="height" constant="60" id="PUu-zz-WYH"/>
+                                        </constraints>
+                                        <state key="normal" title="True">
+                                            <color key="titleColor" red="0.96496719992992008" green="1" blue="0.99485992589220873" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="answerPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EPk-Lw-wKn"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0vz-xS-0rn">
+                                        <rect key="frame" x="217" y="117.66666666666669" width="140" height="60"/>
+                                        <color key="backgroundColor" red="0.72277522208121825" green="0.23764623848379271" blue="0.18710483644918252" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="140" id="3qp-e5-g9g"/>
+                                            <constraint firstAttribute="height" constant="60" id="b6p-9P-pRf"/>
+                                        </constraints>
+                                        <state key="normal" title="False">
+                                            <color key="titleColor" red="0.96496719990000002" green="1" blue="0.99485992590000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="answerPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4sU-Yl-1tQ"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="0vz-xS-0rn" firstAttribute="centerY" secondItem="Md3-tO-q4u" secondAttribute="centerY" id="0YR-jJ-c2t"/>
+                                    <constraint firstItem="ZBm-t7-crq" firstAttribute="trailing" secondItem="Md3-tO-q4u" secondAttribute="centerX" constant="-10" id="34h-ir-2NJ"/>
+                                    <constraint firstItem="0vz-xS-0rn" firstAttribute="leading" secondItem="Md3-tO-q4u" secondAttribute="centerX" constant="10" id="WY8-Ex-bEW"/>
+                                    <constraint firstItem="ZBm-t7-crq" firstAttribute="centerY" secondItem="Md3-tO-q4u" secondAttribute="centerY" id="drn-eO-VDU"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k0v-UX-LTY">
+                                <rect key="frame" x="0.0" y="625.66666666666663" width="414" height="110.33333333333337"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c0q-zp-qA6">
+                                        <rect key="frame" x="0.0" y="82.666666666666742" width="24" height="27.666666666666671"/>
+                                        <color key="backgroundColor" red="0.90627984846421883" green="0.92167671319796951" blue="0.10096263306497631" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="Gik-9c-4KC"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13/13" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tq8-po-5l0">
+                                        <rect key="frame" x="0.0" y="53.666666666666742" width="41" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 133" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmg-7X-Rvy">
+                                        <rect key="frame" x="324" y="53.666666666666742" width="82" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="cmg-7X-Rvy" firstAttribute="centerY" secondItem="Tq8-po-5l0" secondAttribute="centerY" id="6YS-RZ-tez"/>
+                                    <constraint firstItem="c0q-zp-qA6" firstAttribute="leading" secondItem="k0v-UX-LTY" secondAttribute="leading" id="7YG-b1-vQa"/>
+                                    <constraint firstItem="Tq8-po-5l0" firstAttribute="leading" secondItem="k0v-UX-LTY" secondAttribute="leading" id="Twc-JU-cII"/>
+                                    <constraint firstAttribute="trailing" secondItem="cmg-7X-Rvy" secondAttribute="trailing" constant="8" id="dok-97-CYl"/>
+                                    <constraint firstItem="c0q-zp-qA6" firstAttribute="top" secondItem="Tq8-po-5l0" secondAttribute="bottom" constant="8" symbolic="YES" id="fIS-Sh-ebq"/>
+                                    <constraint firstAttribute="bottom" secondItem="c0q-zp-qA6" secondAttribute="bottom" id="jBx-zG-Ulk"/>
+                                    <constraint firstItem="c0q-zp-qA6" firstAttribute="height" secondItem="k0v-UX-LTY" secondAttribute="height" multiplier="0.25" id="qFu-K0-hxo"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="0.10603073332357826" green="0.6563168817156142" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="zvg-rW-8Vz" secondAttribute="top" constant="20" id="Ifp-4K-sEs"/>
+                            <constraint firstItem="k0v-UX-LTY" firstAttribute="width" secondItem="Md3-tO-q4u" secondAttribute="width" id="J8l-KK-cJX"/>
+                            <constraint firstItem="zvg-rW-8Vz" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Jyh-wt-rAD"/>
+                            <constraint firstItem="zvg-rW-8Vz" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.45" id="Lrf-Dc-cRd"/>
+                            <constraint firstItem="k0v-UX-LTY" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="R7r-nz-QEf"/>
+                            <constraint firstItem="zvg-rW-8Vz" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="e6t-rV-LJt"/>
+                            <constraint firstItem="k0v-UX-LTY" firstAttribute="top" secondItem="Md3-tO-q4u" secondAttribute="bottom" id="f2r-Xm-IP3"/>
+                            <constraint firstItem="Md3-tO-q4u" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="kwr-YS-usF"/>
+                            <constraint firstItem="Md3-tO-q4u" firstAttribute="width" secondItem="zvg-rW-8Vz" secondAttribute="width" id="pHh-cW-8vz"/>
+                            <constraint firstItem="Md3-tO-q4u" firstAttribute="centerX" secondItem="zvg-rW-8Vz" secondAttribute="centerX" id="rUC-x7-i3d"/>
+                            <constraint firstItem="zvg-rW-8Vz" firstAttribute="bottom" secondItem="Md3-tO-q4u" secondAttribute="top" id="tFO-eA-JIf"/>
+                            <constraint firstItem="k0v-UX-LTY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="wYH-LK-HuL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="progressBarView" destination="c0q-zp-qA6" id="J1h-Vv-suq"/>
+                        <outlet property="progressLabel" destination="Tq8-po-5l0" id="hs3-V2-yKB"/>
+                        <outlet property="questionLabel" destination="17J-M5-vUV" id="Dkf-Uc-Kaq"/>
+                        <outlet property="scoreLabel" destination="cmg-7X-Rvy" id="0bL-Uw-ej1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
