Completed the core quiz functionality

--- a/Quizzler App/View/Base.lproj/Main.storyboard
+++ b/Quizzler App/View/Base.lproj/Main.storyboard
@@ -23,8 +23,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zvg-rW-8Vz">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="331.33333333333331"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17J-M5-vUV">
-                                        <rect key="frame" x="0.0" y="-0.66666666666665719" width="414" height="332"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17J-M5-vUV">
+                                        <rect key="frame" x="10.333333333333343" y="8" width="393.33333333333326" height="314.66666666666669"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -32,8 +32,8 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="17J-M5-vUV" firstAttribute="width" secondItem="zvg-rW-8Vz" secondAttribute="width" id="YfN-Cd-taj"/>
-                                    <constraint firstItem="17J-M5-vUV" firstAttribute="height" secondItem="zvg-rW-8Vz" secondAttribute="height" id="cxz-vw-MgQ"/>
+                                    <constraint firstItem="17J-M5-vUV" firstAttribute="width" secondItem="zvg-rW-8Vz" secondAttribute="width" multiplier="0.95" id="YfN-Cd-taj"/>
+                                    <constraint firstItem="17J-M5-vUV" firstAttribute="height" secondItem="zvg-rW-8Vz" secondAttribute="height" multiplier="0.95" id="cxz-vw-MgQ"/>
                                     <constraint firstItem="17J-M5-vUV" firstAttribute="centerY" secondItem="zvg-rW-8Vz" secondAttribute="centerY" id="juD-AR-Ejw"/>
                                     <constraint firstItem="17J-M5-vUV" firstAttribute="centerX" secondItem="zvg-rW-8Vz" secondAttribute="centerX" id="wYW-GW-D3i"/>
                                 </constraints>
@@ -41,7 +41,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Md3-tO-q4u">
                                 <rect key="frame" x="0.0" y="331.33333333333337" width="414" height="294.33333333333337"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZBm-t7-crq">
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZBm-t7-crq">
                                         <rect key="frame" x="57" y="117" width="140" height="60"/>
                                         <color key="backgroundColor" red="0.27075586140165003" green="0.72277522208121825" blue="0.39615416540489184" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
@@ -55,7 +55,7 @@
                                             <action selector="answerPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EPk-Lw-wKn"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0vz-xS-0rn">
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0vz-xS-0rn">
                                         <rect key="frame" x="217" y="117.66666666666669" width="140" height="60"/>
                                         <color key="backgroundColor" red="0.72277522208121825" green="0.23764623848379271" blue="0.18710483644918252" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
@@ -82,20 +82,27 @@
                                 <rect key="frame" x="0.0" y="625.66666666666663" width="414" height="110.33333333333337"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c0q-zp-qA6">
-                                        <rect key="frame" x="0.0" y="82.666666666666742" width="24" height="27.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="95.333333333333371" width="24" height="15"/>
                                         <color key="backgroundColor" red="0.90627984846421883" green="0.92167671319796951" blue="0.10096263306497631" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="Gik-9c-4KC"/>
+                                            <constraint firstAttribute="height" constant="15" id="PhW-gd-BON"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13/13" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tq8-po-5l0">
-                                        <rect key="frame" x="0.0" y="53.666666666666742" width="41" height="21"/>
+                                        <rect key="frame" x="0.0" y="20" width="52" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" id="TLe-fA-9uX"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 133" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmg-7X-Rvy">
-                                        <rect key="frame" x="324" y="53.666666666666742" width="82" height="21"/>
+                                        <rect key="frame" x="324" y="20" width="82" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="82" id="vji-XI-cQj"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -104,12 +111,12 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="cmg-7X-Rvy" firstAttribute="centerY" secondItem="Tq8-po-5l0" secondAttribute="centerY" id="6YS-RZ-tez"/>
+                                    <constraint firstItem="Tq8-po-5l0" firstAttribute="top" secondItem="k0v-UX-LTY" secondAttribute="top" constant="20" symbolic="YES" id="7VS-7K-Dfy"/>
                                     <constraint firstItem="c0q-zp-qA6" firstAttribute="leading" secondItem="k0v-UX-LTY" secondAttribute="leading" id="7YG-b1-vQa"/>
+                                    <constraint firstItem="cmg-7X-Rvy" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Tq8-po-5l0" secondAttribute="trailing" constant="20" id="Kfp-A7-lNc"/>
                                     <constraint firstItem="Tq8-po-5l0" firstAttribute="leading" secondItem="k0v-UX-LTY" secondAttribute="leading" id="Twc-JU-cII"/>
                                     <constraint firstAttribute="trailing" secondItem="cmg-7X-Rvy" secondAttribute="trailing" constant="8" id="dok-97-CYl"/>
-                                    <constraint firstItem="c0q-zp-qA6" firstAttribute="top" secondItem="Tq8-po-5l0" secondAttribute="bottom" constant="8" symbolic="YES" id="fIS-Sh-ebq"/>
                                     <constraint firstAttribute="bottom" secondItem="c0q-zp-qA6" secondAttribute="bottom" id="jBx-zG-Ulk"/>
-                                    <constraint firstItem="c0q-zp-qA6" firstAttribute="height" secondItem="k0v-UX-LTY" secondAttribute="height" multiplier="0.25" id="qFu-K0-hxo"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -139,6 +146,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="31.884057971014496" y="34.239130434782609"/>
         </scene>
     </scenes>
 </document>
